// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox/Checkbox Input Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input checked 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c0 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  checked={true}
  className="c0"
  onMouseUp={[Function]}
>
  <input
    checked={true}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-width: 1px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  checked={true}
  className="c0"
  disabled={true}
  onMouseUp={[Function]}
>
  <input
    checked={true}
    className="hiddenCheckbox"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="title"
      size={16}
      type="rgba(0, 0, 0, 0.32)"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c1 .visibleCheckbox {
  background: indigo;
}

.c1 .label {
  font-family: monospace;
}

<label
  className="c0 c1"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
    <div
      className="c2 label"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input in a fieldset 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: 600;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 i {
  -webkit-animation: iVXCSc 1.1s linear infinite;
  animation: iVXCSc 1.1s linear infinite;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c4 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c4 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  border-color: rgba(0,0,0,0.16);
}

.c4 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c4 .label {
  margin-left: 8px;
}

.c4:hover .visibleCheckbox {
  border-width: 1px;
}

.c4 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c2 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c2 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: rgba(0,0,0,0.16);
  background-color: rgba(0,0,0,0.16);
  border-color: rgba(0,0,0,0.16);
}

.c2 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c2 .label {
  margin-left: 8px;
}

.c2:hover .visibleCheckbox {
  border-width: 1px;
}

.c2 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c5 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c5 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #FFFFFF;
  background-color: #3498db;
  border-color: #3498db;
}

.c5 .visibleCheckbox .checkmark {
  visibility: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c5 .label {
  margin-left: 8px;
}

.c5:hover .visibleCheckbox {
  color: #3498db;
  background-color: #ffffff;
  border-color: #3498db;
  border-width: 2px;
}

.c5 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<fieldset>
  <label
    className="c0"
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="checkmark wg-check"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 1
      </div>
    </div>
  </label>
  <label
    className="c2"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      disabled={true}
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="checkmark wg-check"
        />
      </div>
      <div
        className="c3 label"
        fontWeight="title"
        size={16}
        type="rgba(0, 0, 0, 0.32)"
      >
        Disabled Checkbox
      </div>
    </div>
  </label>
   
  <label
    checked={true}
    className="c4"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      checked={true}
      className="hiddenCheckbox"
      disabled={true}
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="checkmark wg-check"
        />
      </div>
      <div
        className="c3 label"
        fontWeight="title"
        size={16}
        type="rgba(0, 0, 0, 0.32)"
      >
        Checked Disabled Checkbox
      </div>
    </div>
  </label>
  <label
    className="c0"
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="checkmark wg-check"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 3
      </div>
    </div>
  </label>
  <label
    checked={true}
    className="c5"
    onMouseUp={[Function]}
  >
    <input
      checked={true}
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="checkmark wg-check"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 4
      </div>
    </div>
  </label>
  <label
    className="c2"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="c6"
      >
        <i
          className="wg-loading"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Checkbox
      </div>
    </div>
  </label>
  <div
    style={
      Object {
        "marginTop": 24,
      }
    }
  >
    <div>
      Another field
      <input
        type="text"
      />
    </div>
  </div>
</fieldset>
`;

exports[`Storyshots Checkbox/Checkbox Input with loading state control 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  checked={false}
  className="c0"
  disabled={false}
  onMouseUp={[Function]}
>
  <input
    checked={false}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input with onChange event 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input with state control 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  checked={false}
  className="c0"
  onMouseUp={[Function]}
>
  <input
    checked={false}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Checkbox Input with text label 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 16px;
  height: 16px;
  font-size: 8px;
  border-radius: 4px;
  color: #3498db;
  background-color: #FFFFFF;
  border-color: rgba(0,0,0,0.16);
}

.c0 .visibleCheckbox .checkmark {
  visibility: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-color: #3498db;
  border-width: 2px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  border-color: #3498db;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="checkmark wg-check"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input checked 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #2ecc71;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  background: #27ae60;
  border-color: rgba(0,0,0,0.16);
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #2ecc71;
  left: 22px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  checked={true}
  className="c0"
  onMouseUp={[Function]}
>
  <input
    checked={true}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input disabled 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: rgba(0,0,0,0.32);
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: rgba(255,255,255,0.32);
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  border-width: 1px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  checked={true}
  className="c0"
  disabled={true}
  onMouseUp={[Function]}
>
  <input
    checked={true}
    className="hiddenCheckbox"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="normal"
      size={16}
      type="rgba(0, 0, 0, 0.32)"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

.c1 .visibleCheckbox {
  background: indigo;
}

.c1 .label {
  font-family: monospace;
}

<label
  className="c0 c1"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
    <div
      className="c2 label"
      fontWeight="normal"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input in a fieldset 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: normal;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: rgba(0,0,0,0.32);
  text-align: left;
  font-weight: normal;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 i {
  -webkit-animation: iVXCSc 1.1s linear infinite;
  animation: iVXCSc 1.1s linear infinite;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c4 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c4 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: rgba(0,0,0,0.32);
}

.c4 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: rgba(255,255,255,0.32);
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .label {
  margin-left: 8px;
}

.c4:hover .visibleCheckbox {
  border-width: 1px;
}

.c4 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
  padding-left: 8px;
}

.c2 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c2 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: rgba(0,0,0,0.32);
}

.c2 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: rgba(255,255,255,0.32);
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .label {
  margin-left: 8px;
}

.c2:hover .visibleCheckbox {
  border-width: 1px;
}

.c2 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c5 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c5 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #2ecc71;
}

.c5 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 .label {
  margin-left: 8px;
}

.c5:hover .visibleCheckbox {
  background: #27ae60;
  border-color: rgba(0,0,0,0.16);
  border-width: 1px;
}

.c5:hover .visibleCheckbox .toggle {
  border-color: #2ecc71;
  left: 22px;
}

.c5 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<fieldset>
  <label
    className="c0"
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="normal"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 1
      </div>
    </div>
  </label>
  <label
    className="c2"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      disabled={true}
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        />
      </div>
      <div
        className="c3 label"
        fontWeight="normal"
        size={16}
        type="rgba(0, 0, 0, 0.32)"
      >
        Disabled Checkbox
      </div>
    </div>
  </label>
   
  <label
    checked={true}
    className="c4"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      checked={true}
      className="hiddenCheckbox"
      disabled={true}
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        />
      </div>
      <div
        className="c3 label"
        fontWeight="normal"
        size={16}
        type="rgba(0, 0, 0, 0.32)"
      >
        Checked Disabled Checkbox
      </div>
    </div>
  </label>
  <label
    className="c0"
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="normal"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 3
      </div>
    </div>
  </label>
  <label
    checked={true}
    className="c5"
    onMouseUp={[Function]}
  >
    <input
      checked={true}
      className="hiddenCheckbox"
      name="foo"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        />
      </div>
      <div
        className="c1 label"
        fontWeight="normal"
        size={16}
        type="#2f313a"
      >
        Checkbox Label 4
      </div>
    </div>
  </label>
  <label
    className="c2"
    disabled={true}
    onMouseUp={[Function]}
  >
    <input
      className="hiddenCheckbox"
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="centerVisibleCheckbox"
    >
      <div
        className="visibleCheckbox"
      >
        <div
          className="toggle"
        >
          <div
            className="c6"
          >
            <i
              className="wg-loading"
            />
          </div>
        </div>
      </div>
      <div
        className="c1 label"
        fontWeight="normal"
        size={16}
        type="#2f313a"
      >
        Checkbox
      </div>
    </div>
  </label>
  <div
    style={
      Object {
        "marginTop": 24,
      }
    }
  >
    <div>
      Another field
      <input
        type="text"
      />
    </div>
  </div>
</fieldset>
`;

exports[`Storyshots Checkbox/Switch Input with loading state control 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  checked={false}
  className="c0"
  disabled={false}
  onMouseUp={[Function]}
>
  <input
    checked={false}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="normal"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input with onChange event 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="normal"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input with state control 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 0;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  checked={false}
  className="c0"
  onMouseUp={[Function]}
>
  <input
    checked={false}
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
  </div>
</label>
`;

exports[`Storyshots Checkbox/Switch Input with text label 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: normal;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding-left: 8px;
}

.c0 .centerVisibleCheckbox {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .hiddenCheckbox {
  opacity: 0;
  width: 0;
  margin: 0;
}

.c0 .visibleCheckbox {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: 1px solid;
  width: 56px;
  height: 32px;
  border-radius: 100px;
  border-color: rgba(0,0,0,0.16);
  background: #f6f8f9;
}

.c0 .visibleCheckbox .toggle {
  position: relative;
  -webkit-transition: ease all 0.2s;
  transition: ease all 0.2s;
  width: 24px;
  height: 24px;
  border: 1px solid transparent;
  border-radius: 24px;
  box-sizing: border-box;
  background: white;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.16);
  left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .label {
  margin-left: 8px;
}

.c0:hover .visibleCheckbox {
  background: #f6f8f9;
  border-color: #3498db;
  border-width: 1px;
}

.c0:hover .visibleCheckbox .toggle {
  border-color: #3498db;
  left: 10px;
}

.c0 .hiddenCheckbox:focus + div .visibleCheckbox {
  outline: auto 2px Highlight;
  outline: auto 5px -webkit-focus-ring-color;
}

<label
  className="c0"
  onMouseUp={[Function]}
>
  <input
    className="hiddenCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="centerVisibleCheckbox"
  >
    <div
      className="visibleCheckbox"
    >
      <div
        className="toggle"
      />
    </div>
    <div
      className="c1 label"
      fontWeight="normal"
      size={16}
      type="#2f313a"
    >
      Checkbox Label
    </div>
  </div>
</label>
`;
